--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "velite:dev": "velite --watch",
     "gen-types": "supabase gen types typescript --project-id tvstbbuidvwgelgidaqy --schema public > lib/supabase/__generated__/types.ts",
     "three": "^0.165.0",
-    "wiggle": "^0.0.14",
-    "codegen:craft": "node scripts/generate-station-code.js"
+    "wiggle": "^0.0.14"
   },
   "dependencies": {
     "@code-hike/mdx": "^0.9.0",
